# sDRIPS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.cfg  sitemap.xml
.githooks/: check_et_scripts.py
Applications/sDRIPS_Ukulima/: index.html
Codes/: Bulk_SEBAL_Framework_Run.py  Canal_Config_Creator.py  Canal_Water_Distribution_script.py  Percolation_Script.ipynb  Plotting_Deficit_Surplus_Script.py  Plotting_Net_Water_Req.py  SEBAL_ET_Canals_Framework.py  SEBAL_ET_Canals_Framework_BWDB_CMD.py  SEBAL_ET_Canals_Framework_BWDB_CMD_iterative.py  SEBAL_Framework_Automated.py  SEBAL_Framework_Canal_Stats_Distribution.py  SSM_Sentinel1.ipynb  SSM_Sentinel1_CSV_Analysis.ipynb  gfs_old_gee_check.py  sDRIPS_Framework.py
Commands/cli/: index.html
Commands/notebook/: index.html
Config_Files/: Canal_Config.ini  Script_Config.ini  Secrets.ini
Config_files/: Canal_Config.ini  Script_Config_Base.ini
Configuration/command_area_config/: index.html
Configuration/config_links/: index.html
Configuration/crop_config/: index.html
Configuration/script_config/: index.html
Configuration/secrets/: index.html
Contact/contact/: index.html
Development/Developer_Version/: index.html
Directory/Data_Used/: index.html
Directory/Directory/: index.html
Disclaimer/disclaimer/: index.html
Distribution_Files/: README.md
Model/ComputationalModel/: index.html
Model/ConceptualModel/: index.html
Motivation/motivation/: index.html
Quick_Start/Getting_ready/: index.html
Quick_Start/Installation/: index.html
Shapefiles/: README.md
Shapefiles/canal_network/: Irrigation_Canal_Networks.dbf  Irrigation_Canal_Networks.shp  Irrigation_Canal_Networks.shx  Irrigation_File_Modified.dbf  Irrigation_File_Modified.prj  Irrigation_File_Modified.qmd  Irrigation_File_Modified.shp  Irrigation_File_Modified.shx  Reprojected_Mapped_Buffer_Canals.dbf  Reprojected_Mapped_Buffer_Canals.shp  Reprojected_Mapped_Buffer_Canals.shx
Shapefiles/cmd_area_wgs/: Teesta_Command_Areas.dbf  Teesta_Command_Areas.shp  Teesta_Command_Areas.shx
api/sdrips/: index.html
config_files/: crop_config.yaml
config_files_template/: config_links.yaml  crop_config.yaml  sdrips_config.yaml  secrets.yaml
css/: custom.css
docs/: conf.py  index.md  index.rst  requirements.txt
js/: google_analytics.js
search/: search_index.json
temp_folder/: Crop_Config.ini
tests/: test_cmd_config.py
(+61 files in other folders)
