[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdrips"
version = "0.1.3"
description = "A Package For Optimizing Surface Water Irrigation using Satellite Remote Sensing"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Shahzaib Khan", email = "skhan7@uw.edu" }
]
dependencies = [
    "beautifulsoup4",
    "contextily",
    "earthengine-api", 
    "filelock",
    "geemap",
    "geopandas",
    "geopy",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "paramiko",
    "pykrige",
    "pyproj",
    "pytest",
    "pyyaml",
    "rasterio",
    "requests",
    "rioxarray",
    "ruamel.yaml",   
    "scikit-learn",
    "scipy",
    "shapely",
    "tqdm",
    "xarray",
    "cartopy",
    "google-cloud-resource-manager"
]

[project.urls]
Homepage = "https://github.com/UW-SASWE/sDRIPS"
Repository = "https://github.com/UW-SASWE/sDRIPS/tree/src-refactor"
"Bug Tracker" = "https://github.com/UW-SASWE/sDRIPS/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sdrips = "sdrips.cli.sdrips_init:main"
