[metadata]
name = sdrips
version = 0.1.0
description = A Package For Optimizing Surface Water Irrigation using Satellite Remote Sensing
long_description = file: README.md
long_description_content_type = text/markdown
author = Shahzaib Khan
author_email = skhan7@uw.edu, shahzaib1007@gmail.com
url = https://github.com/shahzaib1007/sDRIPS
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =

[options.packages.find]
exclude =
    tests*
